--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -1,9 +1,20 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
-
 {% block content %}
-  <h2>Minhas Listas</h2>
-  <p>Bem-vindo à sua TO-DO LIST! Aqui você verá suas listas e tarefas.</p>
+  <h1>Minhas Listas</h1>
+
+  <p><a href="{{ url_for('todo.criar') }}">Criar nova lista</a></p>
+
+  {% if listas %}
+    <ul>
+      {% for lista in listas %}
+        <li>
+          <a href="{{ url_for('todo.ver_lista', id=lista.id) }}">{{ lista.titulo }}</a>
+          (Criada por {{ lista.username }} em {{ lista.criado_em }})
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>Bem-vindo à sua TO-DO LIST! Aqui você verá suas listas e tarefas.</p>
+  {% endif %}
 {% endblock %}
-  
